[package]
name = "pagebloomfilter"
version = "1.3.0"
edition = "2021"
rust-version = "1.65"
description = "Fast page-based Bloom filter"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/PeterRK/PageBloomFilter"
homepage = "https://github.com/PeterRK/PageBloomFilter"
keywords = ["bloom-filter", "probabilistic", "filter", "storage"]
categories = ["data-structures", "algorithms"]
publish = ["crates-io"]

[lib]
name = "pbf"
doctest = false

[dependencies]
